<resources>
    <string name="aquaLife">AquaLife</string>
    <string name="login">Login</string>
    <string name="logar">Logar</string>
    <string name="insiraSuasCredenciais">Insira suas credenciais</string>
    <string name="apelido">Apelido...</string>
    <string name="senha">Senha...</string>
    <string name="desejaFazerUmCadastro">Deseja fazer um Cadastro?</string>
    <string name="sobre">Sobre</string>
    <string name="cadastro">Cadastro</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="desejaFazerLogin">Deseja fazer Login?</string>
    <string name="textoSobre">Equipe do Projeto: \n\n Gustavo Mandu Ferreira Matori \n Ryan Oliveira Dias \n Clara Batista \n\n O AquaLife foi feito como atividade da disciplina Programação para Dispositivos Móveis ministrada pelo Prof° Jadir Mendonça.\n\n O AquaLife é uma iniciativa para educação e conscientização da população sobre os Oceanos e Animais Marinhos. \n\n Ao se cadastrar o app salvará seu progresso, permitindo que quando volte a jogar posteriormente o seu avanço não seja perdido.</string>
    <string name="gerenciarDados">Gerenciar Dados</string>
    <string name="fechar">Fechar</string>
    <string name="sobreAquaLife">Sobre AquaLife</string>
    <string name="configuracoes">Configurações</string>
    <string name="insiraUmNomeParaDeletar">Insira um nome para deletar...</string>
    <string name="insiraASenhaDoUsuario">Insira a senha do usuário...</string>
    <string name="deletarUmUsuario">Deletar um usuário</string>
    <string name="telaDeLogin">Tela de Login</string>
    <string name="paginaInicial">Página Inicial</string>
    <string name="olaNome">Olá, nome!</string>
    <string name="sejaBemVindo">Seja bem-vindo!</string>
    <string name="desejaMudarDeConta">Deseja mudar de conta?</string>
    <string name="novaJornada">Nova Jornada</string>
    <string name="continuar">Continuar</string>
    <string name="setaVoltar">◀</string>
    <string name="botaoHome">🏠</string>
    <string name="setaAvancar">▶</string>
    <string name="textoTopico1_t1">Olá, estudante! \nVocê está no AquaLife, um app de aprendizado orientado a jogos de perguntas e respostas, espero que você se divirta com nossas atividades e saia com consciência sobre a vida marinha e seu papel para mudar o mundo!\n Divirta-se!</string>
    <string name="textoTopico1_t2">Introdução marinha\n\nOs oceanos compõem cerca de 71% do planeta Terra, uma imensidão de água salgada que habita mais de 260 milhões de espécies marítimas vivendo em oceanos.\n\nA cada ano é descoberto cerca de 2 mil espécies por ano, de acordo com fontes do G1 é dito que: censo mostra que cientistas estão dispostos a encontrar 100 mil espécies nos próximos 10 anos.\n\nNo Brasil cerca de 95% do comércio internacional é feito através de navegações, os mares banham 8 mil quilômetros de nosso litorais e rios, ou seja, além de abrigar vidas aquáticas os oceanos também possuem seu valo econômico, mas os oceano não são importantes apenas para a vida aquática e econômica.\n\nEles possuem importância em relação ao oxigênio de todo planeta, já que as algas são considerados os verdadeiros "pulmão do mundo" e não a Amazônia (desculpa Amazônia), compondo 54% do oxigênio de todo planeta.\nMuito interessante não é? Mas temos muitos problemas que ameaçam todas essas maravilhas, e precisamos resolve-los antes que seja tarde demais.\nE a nossa melhor ferramenta para combater isso... é o nosso conhecimento!\n\nAgora que você sabe toda a importância dos oceanos, vamos testar seu conhecimento com alguma perguntinhas. Sei que você se dará bem e não tem problema errar desde que você aprenda com os seus erros. Boa sorte!</string>
    <string name="textoTopico2_t1">Animais Marinhos\n\nAnimais marinho são animais que estão habituados em oceanos e mares, ou seja, ambiente com água salgada.\n\nEles possuem diversos tamanhos, formas e estilo de vida diferentes como dito anteriormente são mais de 260 milhões de espécies que posteriormente serão descobertas ainda mais.\n\n
Eles são divididos por grupos:\n\nPeixes, Crustáceos, Equinodermos, Mamíferos, Répteis, Vermes marinhos, Moluscos, Esponjas e Rotíferos.\n\n
Começaremos pelos animais mais conhecidos, os peixes.\n\n
Peixes: Apesar de sua vasta diversidade e espécies distintas todos os peixes possuem:\n\nCorpo tipicamente fusiforme, respiração geralmente do tipo branquial, presença de nadadeiras e ectotermia.\n\n
Répteis marinhos: são animais rastejantes que possuem a capacidade de nado também, tendo a capacidade de se adaptar e viverem em oceanos, corpo com poucas glândulas, impermeável e coberto por escamas e/ou placas ósseas, a presença de pulmões, e ovos com casca e anexos.\n\n
Mamíferos: são animais que fazem parte da mesma categoria que nós humanos, possuindo: coluna vertebral, reprodução vivípara e sistemas pulmonares desenvolvido. Entretanto apesar de algumas semelhanças com os humanos eles possuem suas individualidades. Sendo esses grupos de animais marinhos:\n\n
	Sirênios: animais de grade porte, são herbívoros e se locomovem com lentidão. Exemplos: Peixe-boi;\n\n
	Cetáceos: são mamíferos de pequeno porte que também são divididos me mais de 80 espécie;\n\n
	Pinipédes: são animais que vivem tanto fora quanto dentro quanto da água. Exemplo: Urso polar.\n\n
Crustáceos: Possuem carapaça e membros inferiores articulados, possui dois pares de antenas na cabeça e são invertebrados, corpo segmentado, apêndices articulados, celoma, simetria bilateral e sistema digestório completo. Exemplo: Camarão;\n\n
Vermes marinhos: corpo alongado e/ou achatado e sem esqueleto interno ou externo, não possuem membros, embora possam ter apêndices reduzidos na superfície para a locomoção.\n\n
Equinodermos: apresentam um esqueleto interno (endoesqueleto) formado por placas calcárias, o qual porta comumente espinhos ou tubérculos salientes.\n\n
Rotíferos marinhos: coroas ciliadas localizadas em sua cabeça, uma estrutura característica usada tanto para locomoção como para coletar partículas de alimentos.\n\n
Esponjas: são animais invertebrados, que possuem um conjunto corporal bem simplificado, apenas uma fina estrutura externa cheia de furinhos microscópicos e uma abertura grande na ponta, chamada de ósculo. Não possuem sistema nervoso, músculos e nem órgãos internos.\n\n

        Entendeu sobre a características sobre os animais, sei que são bastantes, mas é isso que faz os nossos oceanos serem tão ricos de seres intrigantes e maravilhosos. Agora você fará um pequeno teste, boa sorte!</string>
    <string name="textoTopico3_t1">Poluição Marinha\n\nComo no assunto abordado anteriormente a vida aquática está em constante ameaça graças a nossas ações, como o descarte irregular de lixo.\n\nAlgumas ações já são feitas para amenizar esse tipo de impacto no ambiente, como a adesão de: canudos de papel, utilização de sacolas reutilizáveis, reciclar lixo, entre outros métodos.\n\nEntretanto isso não será suficiente enquanto não houver a conscientização de todas as pessoas, e é aí que nós fazemos nossa parte.\n\n
E como podemos fazer isso? Não descartar o lixo no chão, não jogar óleo nas pias, não jogar sacolas plásticas em mares e rios ou lagos, não descartar medicamentos em vasos sanitários, reduzir desperdício de água, evitar utilizar produtos químicos para limpeza.\n\n
Um dos principais problemáticos na vida marinha é a presença do plástico devido descarte irregular desse tipo de material, onde acaba por ser uma potencial ameaça a vida marinha caso esses animais acabem por ingerir ou se asfixiar com esse tipo de material. Além disso um problema ainda mais grave é quando esse mesmo plástico acaba por se fragmentar a um nível que se torna um micro plástico.\n\nIsso não só afeta esses animais pela ingestão, como também nos afeta ao nos alimentar desses animais.\n\n
Além do plástico o vazamento de petróleo, problema no qual é decorrente de acidentes nas plataformas e embarcações carregadas de petróleo, que impactam todo ecossistema marinho e a todos os seres vivos. Esse vazamento impede a penetração de luz solar causando a morte de algas e fitoplanctons que não podem realizar fotossíntese em decorrência disso; Pode intoxicar esses animais marinhos ao ingerirem essa substância; Além dos peixes as aves também são afetadas por desequilíbrio térmico caso sejam cobertos pelo petróleo; Afeta o turismo local; A pesca acaba por ser inviável justamente por essa intoxicação; entre outros problemas.\n\n

Conseguiu entender a importância dos cuidados com o nosso lixo e o quão isso impacta na vida marinha? Se sim, então vamos colocar seu conhecimento à prova! Boa sorte.</string>
    <string name="textoTopico5_t1">Tecnologia\n\nNesse tópico iremos abordar um tema muito interessante no ramo da ciência que está ligada a tecnologia e nossos oceanos, as tecnologias sustentáveis.\n\nO mundo anda por constantes mudanças e com o avanço da ciência e da tecnologia isso fica ainda mais evidente, podendo serem usadas não somente para facilitar a vida da humanidade ou como ferramenta de entretenimento. Como também, para auxiliar na sustentabilidade de nosso planeta.\n\n
Pegando como exemplo os problemas citados bem ao início de nossa aventura, como:\n\npoluição, pesca e mudanças climáticas.\n\nDeixam em evidência a necessidade de encontrar meios mais efetivos e eficazes para solucionar esses problemas tão recorrentes como esses.\n\n
Há algumas tecnologias que já são aplicadas em nosso dia a dia para monitoração e resolução dessas ameaças:\n\n

Monitoramento por Satélite e Inteligência Artificial - a junção dessas duas ferramentas acaba por se tornar um método muito poderoso de monitoração dos nossos oceanos.\n\nPermitindo visualizar atividades de ilegais em tempo real em uma escala global. Além de identificar habitats marinho que possuem uma carência maior para serem conservados.\n\n

Barreiras Flutuantes para Limpeza de Resíduos Plásticos - esse tipo de tecnologia tem como objetivo recolher detritos despejados em oceanos e direciona-los através da corrente marítima em uma área delimitada agindo de forma passiva, para que depois seja recolhido para reciclagem.\n\n

Recifes Artificiais e Tecnologias de Restauração Marinha: tem como objetivo criar recifes artificiais e um ambiente para áreas que tenham sofrido com a degradação desses recifes de corais. Como resultado acreditam que haja uma e redução da erosão de costas.\n\n

Energias Renováveis no Mar - essa tecnologia visa aproveitar recursos de Energia eólica e da movimentação da corrente oceânica, com o intuito de gerar energia renovável. Reduzindo a necessidade de gerar energia por combustíveis poluentes e na emissão de gases, sendo uma energia limpa e ilimitada.\n\n

Apesar da tecnologia ser muito útil para conservação do meio ambiente, ela não se limita somente a isso, mas como também na exploração e estudo dos animais presentes nesse ambiente.\n\nCom o intuito de compreendermos melhor como esse sistema funciona e como podemos ajudar a partir desses conhecimentos adquiridos com o auxilio da tecnologia.\n\n

A tecnologia está para nos ajudar assim como estamos fazendo para que você se conscientize sobre esses problemas e como soluciona-los, e nada mais importante do que testar você para saber se realmente aprendeu, então vamos lá! Boa sorte!
</string>
</resources>