<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/popup_background">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sobreAquaLife"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:gravity="center" />

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textoSobre"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btnConfigGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/gerenciarDados"
        android:backgroundTint="@color/blue"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/fechar"
        android:backgroundTint="@color/blue"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp" />


</LinearLayout>
