<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Login"
    android:background="@drawable/background_azul">

    <TextView
        android:id="@+id/tvwTitleAquaLife"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="cursive"
        android:text="@string/aquaLife"
        android:textColor="#20C2D7"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/containerMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/containerMain"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/container_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paginaInicial"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toTopOf="@id/containerMain"
        app:layout_constraintStart_toStartOf="@id/containerMain"
        app:layout_constraintEnd_toEndOf="@id/containerMain"/>

    <TextView
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:text="@string/olaNome"
        android:textSize="26dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/containerMain"
        app:layout_constraintStart_toStartOf="@id/containerMain"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        tools:layout_editor_absoluteY="222dp" />



    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="5dp"
        android:text="@string/sejaBemVindo"
        android:gravity="center"
        android:textSize="26dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/containerMain"
        app:layout_constraintStart_toStartOf="@id/containerMain"
        app:layout_constraintTop_toBottomOf="@id/txtUsername"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>





    <TextView
        android:id="@+id/txtChangeAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="24dp"
        android:text="@string/desejaMudarDeConta"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/containerMain"
        app:layout_constraintStart_toStartOf="@id/containerMain"
        app:layout_constraintTop_toBottomOf="@id/txtWelcome" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:padding="15sp"
        android:layout_marginTop="0sp"
        android:text="@string/novaJornada"
        android:background="@drawable/background_button_selector"
        android:enabled="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintBottom_toBottomOf="@id/containerMain"
        app:layout_constraintEnd_toEndOf="@id/containerMain"
        app:layout_constraintStart_toStartOf="@id/containerMain"
        app:layout_constraintTop_toBottomOf="@id/txtChangeAccount" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:padding="15sp"
        android:layout_marginTop="10sp"
        android:text="@string/continuar"
        android:enabled="true"
        android:background="@drawable/background_button_selector"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtChangeAccount" />



</androidx.constraintlayout.widget.ConstraintLayout>