<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Topico3"
    android:background="@drawable/topico3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btnVoltar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/purple"
                android:layout_marginEnd="40dp"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/setaVoltar" />
            <Button
                android:id="@+id/btnHome"
                android:layout_width="0dp"
                android:backgroundTint="@color/purple"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/botaoHome" />
            <Button
                android:id="@+id/btnAvancar"
                android:layout_width="0dp"
                android:backgroundTint="@color/purple"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="40dp"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/setaAvancar" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>